<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewScrambledWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/scrambled_word_here"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editTextGuess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_guess_here"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining_60s"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
